# christmas-lights

./: .gitignore  README.md  pyproject.toml
docs/: CALIBRATION_SYSTEM.md  DEVELOPMENT_PLAN.md  GIFT_FORMAT_SPEC.md  POSITION_MAPPING.md
pi/GIFT/: README.md  gift_player.py
pi/GIFT/gifts/: plane_rotation.gift  rainbow.gift  rotation.gift  rotation_hat.gift  rotation_hat_flicker.gift  rotation_strip.gift  x-wipe-rg.gift
pi/GIFT/position_maps/: README.md  generate_test_maps.py  test_linear_50.json
pi/calibration/: README.md  led_control_server.py
pi/standalone/: gaussian-envelope-2.py  gaussian-envelope.py  led_test.py
remote/: README.md  pyproject.toml
remote/calibration/: README.md  camera_capture.py  capture_session.py  check_calibration.py  pi_control.py  triangulation.py  visualize_positions.py
remote/calibration/position-maps/: 2025-tree-positions.detailed.json  2025-tree-positions.json
remote/gift-generation/: README.md  SIMULATOR.md  example_rainbow_bands.py  gift_creator.py  simulate_gift.py
